[gd_scene load_steps=2 format=3 uid="uid://b6xy2hbs0hb2c"]

[ext_resource type="Script" path="res://Scripts/ChoiceUi.gd" id="1_erwcg"]

[node name="ChoiceUI" type="CanvasLayer"]
script = ExtResource("1_erwcg")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 200)
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 360.0
offset_bottom = 200.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Option1" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2

[node name="Option2" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2

[node name="Option3" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
